--- a/style.css
+++ b/style.css
@@ -4,18 +4,16 @@ body{
     font-family: "Open Sans", sans-serif;
 }
 
-/*Top Menu*/
-
-li{
-    color: white;
-    list-style: none;
+h2{
+    font-size: 2.5rem;
 }
 
+/*Top Menu*/
 svg:hover{
     fill: #eee9cb;
 }
 
-li:hover {
+#Menu-bar > li:hover {
     color: #eee9cb;
     cursor: pointer;
   }
@@ -27,7 +25,7 @@ li:hover {
     background-color: #021526;
     padding: 20px;
     text-align: center;
-    font-size: .8rem;
+    font-size: 1.3rem;
     gap: 1rem;
 }
 
@@ -35,6 +33,8 @@ li:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: white;
+    list-style: none;
 }
 
 .about{
@@ -53,19 +53,184 @@ li:hover {
     grid-area: 1 / 5;
 }
 
-.Contact > img{
-    max-width: 150px;
-}
 
 /*Banner Section*/
 
-#Presentation{
+.PresentationGrid{
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: repeat(6, 1fr);
-    padding: 20px;
+    padding: 40px;
     text-align: center;
-    font-size: .8rem;
     gap: 1rem;
-    background-image: url(https://eu-images.contentstack.com/v3/assets/blt740a130ae3c5d529/blt0275bfb05eb4e934/650f0329cd65a44b04a8d1eb/IRE6XYVC3VFXDAXBGJGBKHCUHE.jpg?width=1280&auto=webp&quality=95&format=jpg&disable=upscale)
+    position: relative;
 }
+
+.Presentationleft{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20%;
+    position: relative;
+}
+
+.PresentationGrid::before{
+    content: "";
+    background-image: url(./Assets/5594016.jpg);
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: .25;
+}
+
+h1{
+    font-size: 4rem;
+    font-family:fantasy;
+    color: #021526;
+    text-decoration: underline;
+    position: relative;
+}
+
+.HeroImage > img{
+    grid-area: 1 / 2;
+    width: 60%;
+    min-width: 250px;
+    padding-left: 20%;
+    position: relative;
+}
+
+/*About Section*/
+
+.AboutSection{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+    background-color:#021526;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.AboutMe > li{
+    list-style: none;
+    line-height: 2;
+}
+
+.ProfilePic > img{
+    height: 400px;
+}
+
+.ProfilePic > p{
+    color: #6EACDA;
+    position: absolute; left: 915px; top: 1190px;
+    font-family: cursive;
+    font-size: 2.54rem;
+}
+
+.AboutMe{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    color: white;
+}
+
+.Experience{
+    display: flex;
+    line-height: 2;
+    margin-right: 70px;
+    margin-left: 50px;
+    flex-wrap: wrap;
+    color: white;
+}
+
+.ProfilePic{
+    display: flex;
+    align-items: end;
+}
+
+/*Skills Section*/
+
+.SkillSection{
+    padding: 50px;
+}
+
+.SkillSection > ul{
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    line-height: 2.5rem;
+}
+
+ul.cloud a {
+    color: #a33;
+    display: block;
+    font-size: 1.5rem;
+    padding: 0.125rem 0.25rem;
+    text-decoration: none;
+    position: relative;
+  }
+
+
+/*Text Size based on data weight attribute*/
+ul.cloud a[data-weight="1"] { --size: 1; }
+ul.cloud a[data-weight="2"] { --size: 2; }
+ul.cloud a[data-weight="3"] { --size: 3; }
+ul.cloud a[data-weight="4"] { --size: 4; }
+ul.cloud a[data-weight="5"] { --size: 5; }
+ul.cloud a[data-weight="6"] { --size: 6; }
+ul.cloud a[data-weight="7"] { --size: 7; }
+ul.cloud a[data-weight="8"] { --size: 8; }
+ul.cloud a[data-weight="9"] { --size: 9; }
+
+ul.cloud a {
+  --size: 4;
+  font-size: calc(var(--size) * 0.4rem + 0.5rem);
+  /* ... */
+}
+
+ul.cloud[data-show-value] a::after {
+    content: " (" attr(data-weight) ")";
+    font-size: 1rem;
+}
+
+ul.cloud li:nth-child(2n+1) a { --color: #181; }
+ul.cloud li:nth-child(3n+1) a { --color: #33a; }
+ul.cloud li:nth-child(4n+1) a { --color: #c38; }
+
+ul.cloud a {
+    opacity: calc((15 - (9 - var(--size))) / 15); 
+    /* ... */
+}
+
+ul.cloud a:focus {
+    outline: 1px dashed;
+} 
+
+ul.cloud a::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 0;
+    height: 100%;
+    background: var(--color);
+    transform: translate(-50%, 0);
+    opacity: 0.15;
+    transition: width 0.25s;
+  }
+  
+  ul.cloud a:focus::before,
+  ul.cloud a:hover::before {
+    width: 100%;
+  }
+
+  @media (prefers-reduced-motion) {
+    ul.cloud * {
+      transition: none !important;
+    }
+  }
