--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ svg:hover{
 }
 
 h1{
-    font-size: 4rem;
+    font-size: 3.5rem;
     font-family:fantasy;
     color: #021526;
     text-decoration: underline;
@@ -97,6 +97,7 @@ h1{
     grid-area: 1 / 2;
     width: 60%;
     min-width: 250px;
+    max-width: 1000px;
     padding-left: 20%;
     position: relative;
 }
@@ -104,133 +105,51 @@ h1{
 /*About Section*/
 
 .AboutSection{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
     align-items: center;
-    justify-items: center;
     background-color:#021526;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    flex-wrap: wrap;
+    padding-left: 50px;
+    padding-right: 50px;
+    color: white;
+}
+
+.AboutSection > Div{
+    padding: 50px;
 }
 
 .AboutMe > li{
     list-style: none;
     line-height: 2;
+
 }
 
 .ProfilePic > img{
     height: 400px;
 }
 
-.ProfilePic > p{
-    color: #6EACDA;
-    position: absolute; left: 915px; top: 1190px;
-    font-family: cursive;
-    font-size: 2.54rem;
-}
-
-.AboutMe{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    color: white;
-}
-
 .Experience{
-    display: flex;
     line-height: 2;
-    margin-right: 70px;
-    margin-left: 50px;
-    flex-wrap: wrap;
-    color: white;
+    max-width: 50rem;
 }
 
-.ProfilePic{
-    display: flex;
-    align-items: end;
-}
 
 /*Skills Section*/
 
-.SkillSection{
-    padding: 50px;
+.skills{
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    gap: 10px;
 }
 
-.SkillSection > ul{
+.skills > li{
     list-style: none;
     padding-left: 0;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    line-height: 2.5rem;
+    gap: 10px;
+    font-size: 2rem;
 }
-
-ul.cloud a {
-    color: #a33;
-    display: block;
-    font-size: 1.5rem;
-    padding: 0.125rem 0.25rem;
-    text-decoration: none;
-    position: relative;
-  }
-
-
-/*Text Size based on data weight attribute*/
-ul.cloud a[data-weight="1"] { --size: 1; }
-ul.cloud a[data-weight="2"] { --size: 2; }
-ul.cloud a[data-weight="3"] { --size: 3; }
-ul.cloud a[data-weight="4"] { --size: 4; }
-ul.cloud a[data-weight="5"] { --size: 5; }
-ul.cloud a[data-weight="6"] { --size: 6; }
-ul.cloud a[data-weight="7"] { --size: 7; }
-ul.cloud a[data-weight="8"] { --size: 8; }
-ul.cloud a[data-weight="9"] { --size: 9; }
-
-ul.cloud a {
-  --size: 4;
-  font-size: calc(var(--size) * 0.4rem + 0.5rem);
-  /* ... */
-}
-
-ul.cloud[data-show-value] a::after {
-    content: " (" attr(data-weight) ")";
-    font-size: 1rem;
-}
-
-ul.cloud li:nth-child(2n+1) a { --color: #181; }
-ul.cloud li:nth-child(3n+1) a { --color: #33a; }
-ul.cloud li:nth-child(4n+1) a { --color: #c38; }
-
-ul.cloud a {
-    opacity: calc((15 - (9 - var(--size))) / 15); 
-    /* ... */
-}
-
-ul.cloud a:focus {
-    outline: 1px dashed;
-} 
-
-ul.cloud a::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 0;
-    height: 100%;
-    background: var(--color);
-    transform: translate(-50%, 0);
-    opacity: 0.15;
-    transition: width 0.25s;
-  }
-  
-  ul.cloud a:focus::before,
-  ul.cloud a:hover::before {
-    width: 100%;
-  }
-
-  @media (prefers-reduced-motion) {
-    ul.cloud * {
-      transition: none !important;
-    }
-  }
