--- a/style.css
+++ b/style.css
@@ -102,10 +102,26 @@ h1{
 .HeroImage > img{
     grid-area: 1 / 2;
     width: 60%;
-    min-width: 250px;
     max-width: 1000px;
     padding-left: 20%;
     position: relative;
+}
+
+@media (max-width: 600px) {
+	/* CSS for screens below or equal to 600px wide*/
+    .HeroImage > img{
+        grid-area: 1 / 2;
+        width: 50%;
+        height: 30%;
+        padding-left: 50%;
+        padding-top: 50%;
+        position: relative;
+    }
+
+    .ProfilePic > img{
+        height:20%;
+    }
+
 }
 
 /*About Section*/
@@ -160,7 +176,6 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
     margin-bottom: 30px;
     text-align: center;
 }
