--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ h1{
     padding: 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .ExpH2{
@@ -190,22 +190,39 @@ h1{
 .content{
     padding-left: 1%;
     padding-right: 8%;
-    border-left: 2px solid #6EACDA;
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-}
-
-.content::before{
-    content: "";
-    position:fixed
-    width: 16px;
-    height: 16px;
-    border-radius: 50px;
-    top: 0;
-    border: 2px solid #6EACDA;
+    border-left: 3px solid #6EACDA;
+    width: 750px;
 }
 
 .content > ul li{
     list-style:circle;
+}
+
+/*Contact me Section*/
+
+.Footer{
+    background-color: #021526;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    
+}
+
+.contact > h2{
+    color: White;
+    font-size: 2rem;
+    text-align: center;
+ 
+}
+
+.channels{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+    align-items: center;
+    text-align: center;
+    width: 50%;
+    color: white;
+    border: solid 1px;
+    border-color: white;
+
 }
